change ui to sui

--- a/server/views/users.ejs
+++ b/server/views/users.ejs
@@ -66,7 +66,7 @@
                   </ul>
               </div>
               <div class="card">
-                  <div class="card-header">面点预定明细:</div>
+                  <div class="card-header">面点预定明细</div>
                   <div class="card-content">
                       <div class="card-content-inner">
                           <div>
