change ui to sui

--- a/server/views/stats.ejs
+++ b/server/views/stats.ejs
@@ -22,7 +22,7 @@
               <div class="card-header">晚餐人数</div>
               <div class="card-content">
                   <div class="card-content-inner">
-                      <%= dinner_num %>
+                      <%= dinner_num %>（人）
                   </div>
               </div>
           </div>
@@ -30,8 +30,8 @@
               <div class="card-header">面点人数</div>
               <div class="card-content">
                   <div class="card-content-inner">
-                     <div>包子： <%= dinner_num %></div>
-                     <div>馒头： <%= mantou_num %></div>
+                     <div>包子： <%= baozi_num %>（个）</div>
+                     <div>馒头： <%= mantou_num %>（个）</div>
                   </div>
               </div>
           </div>
