--- a/server/views/users.ejs
+++ b/server/views/users.ejs
@@ -28,11 +28,11 @@
       <!-- 工具栏 -->
       <nav class="bar bar-tab">
           <a class="tab-item external" href="/dinner">
-              <span class="icon icon-home"></span>
+              <span class="icon icon-cart"></span>
               <span class="tab-label">晚餐预定</span>
           </a>
           <a class="tab-item external" href="/pastry">
-              <span class="icon icon-star"></span>
+              <span class="icon icon-clock"></span>
               <span class="tab-label">面点秒杀</span>
           </a>
           <a class="tab-item external active" href="/users">
@@ -70,7 +70,7 @@
                   <div class="card-content">
                       <div class="card-content-inner">
                           <div>
-                              包子：<%= baozi_num%>个
+                              包子/大饼：<%= baozi_num%>个
                           </div>
                           <div>
                               馒头：<%= mantou_num%>个
