--- a/server/views/dinner_order.ejs
+++ b/server/views/dinner_order.ejs
@@ -35,11 +35,11 @@
       <!-- 工具栏 -->
       <nav class="bar bar-tab">
           <a class="tab-item external active" href="/dinner">
-              <span class="icon icon-home"></span>
+              <span class="icon icon-cart"></span>
               <span class="tab-label">晚餐预定</span>
           </a>
           <a class="tab-item external" href="/pastry">
-              <span class="icon icon-star"></span>
+              <span class="icon icon-clock"></span>
               <span class="tab-label">面点秒杀</span>
           </a>
           <a class="tab-item external" href="/users">
@@ -158,7 +158,7 @@
             addItems(page_load, size_load);
         });
 
-        $(".order_btn").click(function () {
+        $(".order_btn").change(function () {
             var url = '/dinner/order';
             if(order_checked){
                 url = '/dinner/cancel';
