change ui to sui

--- a/server/views/dinner_order.ejs
+++ b/server/views/dinner_order.ejs
@@ -179,6 +179,11 @@
                         window.location.reload();
                     },1000);
                 }else{
+                    if(order_checked){
+                        $(".order_btn input").prop("checked",true);
+                    }else{
+                        $(".order_btn input").prop("checked",false);
+                    }
                     $.toast(res.msg);
                 }
             });
