--- a/server/views/users.ejs
+++ b/server/views/users.ejs
@@ -39,8 +39,8 @@
       </nav>
       <!-- 这里是页面内容区 -->
       <div class="content">
-          <div class="content-block">
-              <div class="list-block">
+          <div class="content-block" style="margin-top: 0.5rem;">
+              <div class="list-block" style="margin-top: 0;">
                   <ul>
                       <li class="item-content ">
                           <div class="item-inner">
@@ -60,6 +60,19 @@
                               <div class="item-after"><%= name %></div>
                           </div>
                       </li>
+                  </ul>
+              </div>
+              <div class="list-block">
+                  <ul>
+                      <a href="/noodles" external style="color: #3d4145;">
+                          <li class="item-content item-link">
+                              <div class="item-inner">
+                                  <div class="item-title">面点预定</div>
+                                  <div class="item-after"></div>
+                              </div>
+                          </li>
+                      </a>
+
                   </ul>
               </div>
               <div class="card">
