change ui to sui

--- a/server/views/users.ejs
+++ b/server/views/users.ejs
@@ -80,10 +80,13 @@
                   <div class="card-content">
                       <div class="card-content-inner">
                           <div>
-                              包子/大饼：<%= baozi_num%>个
+                              馒头：<%= mantou_num%>（个）
                           </div>
                           <div>
-                              馒头：<%= mantou_num%>个
+                              包子/大饼：<%= baozi_num%>（个）
+                          </div>
+                          <div style="margin-top: 0.5rem">
+                              寿面：<%= noodles_num %>（份）
                           </div>
                       </div>
                   </div>
