change ui to sui

--- a/server/views/pastry_order.ejs
+++ b/server/views/pastry_order.ejs
@@ -35,7 +35,7 @@
           </a>
           <a class="tab-item external" href="/users">
               <span class="icon icon-me"></span>
-              <span class="tab-label">个人账户</span>
+              <span class="tab-label">个人中心</span>
           </a>
       </nav>
 
