--- a/server/views/users.ejs
+++ b/server/views/users.ejs
@@ -34,7 +34,7 @@
           </a>
           <a class="tab-item external active" href="/users">
               <span class="icon icon-me"></span>
-              <span class="tab-label">个人账户</span>
+              <span class="tab-label">个人中心</span>
           </a>
       </nav>
       <!-- 这里是页面内容区 -->
