change ui to sui

--- a/server/views/users.ejs
+++ b/server/views/users.ejs
@@ -67,7 +67,7 @@
                       <a href="/noodles" external style="color: #3d4145;">
                           <li class="item-content item-link">
                               <div class="item-inner">
-                                  <div class="item-title">面点预定</div>
+                                  <div class="item-title">寿面预定</div>
                                   <div class="item-after"></div>
                               </div>
                           </li>
