change ui to sui

--- a/server/views/noodles_order.ejs
+++ b/server/views/noodles_order.ejs
@@ -33,7 +33,7 @@
     <div class="page page-current">
 
         <header class="bar bar-nav">
-            <div class="label" style="float: left">寿面预定</div>
+            <div class="label" style="float: left">寿面预定(09:00-10:00)</div>
             <div style="float: right;">
                 <label class="label-switch order_btn" style="margin-top: -0.15rem;">
                     <input type="checkbox">
